--- a/Semester 1/Web Design and Client Side Scripting/CV/style.css
+++ b/Semester 1/Web Design and Client Side Scripting/CV/style.css
@@ -1,30 +1,48 @@
+/* Media Queries */
+@media(max-width: 749px) {
+    .inner_box {
+        border: 1px solid black;
+        width: 100%;
+        padding: 25px;
+    }
+}
+
+@media(min-width: 750px) {
+    #container {
+        text-align: center;
+        display:flex;
+        justify-content: space-between;    
+    }
+
+    .inner_box {
+        border: 1px solid black;
+        width: 30%;
+        padding: 15px;
+    }
+}
+
 /* Universal settings */
 body {
-    background-color:antiquewhite;
-    font-family: 'Courier New', Courier, monospace;
+    background-color: antiquewhite;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(66, 76, 86);
-    text-align: center;
+    width: 90%;
+    margin: 0 auto;
 }
 
 h1, h2, h3 {
-    text-shadow: 1px 1px lightslategrey;
+    text-shadow: 1px 1px rgb(255, 255, 255);
+    font-family: 'Courier New', Courier, monospace;
 }
 
 h2 {
     text-decoration: underline;
 }
 
-.section {
-    border: 1px solid black;
-    margin: 5px;
-}
-
-
 .heading {
     font-weight: bold;
     font-family: helvetica;
 }
-
 
 /* Specific sections */
 #skills_section li {
@@ -34,4 +52,19 @@ h2 {
 
 #nav_section ul {
     list-style: none;
+}
+
+#education_section {
+    /* flex: 1; */
+    order: 1;
+}
+
+#experience_section {
+    /* flex: 2; */
+    order: 2;
+}
+
+#skills_section {
+    /* flex: 1; */
+    order: 3;
 }
