Added Week 4 WebDev

--- a/Semester 1/Web Design and Client Side Scripting/CV/style/style.css
+++ b/Semester 1/Web Design and Client Side Scripting/CV/style/style.css
@@ -4,6 +4,7 @@
         border: 1px solid black;
         width: 100%;
         padding: 25px;
+        background-color: white;
     }
 }
 
@@ -18,6 +19,7 @@
         border: 1px solid black;
         width: 30%;
         padding: 15px;
+        background-color: white;
     }
 }
 
@@ -26,8 +28,30 @@ body {
     background-color: antiquewhite;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(66, 76, 86);
-    width: 90%;
+}
+
+#container {
     margin: 0 auto;
+    width: 90%;
+}
+
+#nav_bar ul {
+    list-style: none;
+    margin: 0 0 20px 0;
+    padding: 25px;
+    background-color: black;
+    overflow: hidden;
+    color: beige;
+}
+
+#nav_bar li {
+    float: left;
+}
+
+#nav_bar a {
+    padding: 25px; 
+    color: aliceblue;
+    text-decoration: none;
 }
 
 h1, h2, h3 {
@@ -50,7 +74,7 @@ h2 {
 
 }
 
-#nav_section ul {
+#home_nav ul {
     list-style: none;
 }
 
@@ -67,4 +91,31 @@ h2 {
 #skills_section {
     /* flex: 1; */
     order: 3;
+}
+
+
+/* Cover Letter */
+#letter {
+    border: 1px black solid;
+    background-color: white;
+    height: 1000px;
+    width: 80%;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0 auto;
+}
+
+#letter img {
+    height: 300px;
+    border: 1px black solid;
+    float: right;
+    margin: 0 40px 40px 40px;
+}
+
+#letter p {
+    padding: 2% 10% 2% 10%;
+}
+
+.signature {
+    font-size: xx-large;
+    font-style: oblique;
 }
